# Belote

./: .gitignore  CMakeLists.txt  Diagramme-de-gantt.ods  Makefile  README.md  diagramme-des-classes.class.violet.html  imgui.ini
doc/: diagramme-des-classes.class.violet.html  doxyfile
src/: Aff-static.cpp  Affichage-bot.cpp  Affichage.cpp  Affichage.h  Carte.cpp  Carte.h  CarteG.cpp  Equipe.cpp  Equipe.h  Joueur.cpp  Joueur.h  Main.cpp  Main.h  MainJoueur.cpp  MainJoueur.h  MainJoueurG.cpp  PaquetDeCarte.cpp  PaquetDeCarte.h  Table.cpp  Table.h  TableG.cpp  enums.cpp  main.cpp  mainGraphique.cpp  mainpage.dox  makefile
